# jasmine-gjs

./: .eslintignore  .eslintrc.yml  .jscsrc  .jshintrc  .travis.yml  COPYING  Makefile.am  NEWS.md  README.md  autogen.sh  configure.ac  jasmine-gjs.spec  jasmine.json  jasmine.man  meson.build  release-checklist.md
debian/: changelog  control  copyright  rules
lib/: jasmine.js  local-modifications.patch  update-jasmine.sh
m4/: ax_prog_gjs.m4
src/: command.js  config.js  consoleReporter.js  jasmineBoot.js  junitReporter.js  options.js  tapReporter.js  timer.js  utils.js  verboseReporter.js  xmlWriter.js
test/: 0_your_first_suite.js  commandSpec.js  configSpec.js  consoleReporterSpec.js  custom_matcher.js  defaultReporterSpec.js  focusedSpecIntegrationTest.js  importerSpec.js  jasmineBootSpec.js  jasmineIntegrationTest.js  junitReporterSpec.js  optionsSpec.js  tapReporterSpec.js  timerSpec.js  utils.js  utilsSpec.js  verboseReporterSpec.js  xmlWriterSpec.js
test/fixtures/: include.json  jasmine.json  path.json  syntaxErrorSpec.js
test/fixtures/include/: module.js  spec.js
test/fixtures/path1/: test.js
test/fixtures/path2/: test.js
